<resources>
    <string name="app_name">SportJunkieM</string>
    <string name="sport_junkie_title">Sport Junkie Title</string>
    <string name="logo">Logo</string>
    <string name="signUpEmail">Sign up with Email</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="have_an_account_already">Have an account already?</string>
    <string name="sign_in_with_email">Sign in with Email</string>
    <string name="name_entry_limit">Name Must Be At Least 3 Characters</string>
    <string name="enter_valid_email">Please Enter A Valid Email</string>
    <string name="longer_than_eight">Password Must Be Longer Than 8 Characters</string>
    <string name="your_first_name">First Name</string>
    <string name="enter_password_here">Password</string>
    <string name="emailhint">Email</string>
    <string name="lastnameprompts">Last Name</string>
    <string name="register">Register</string>
    <string name="sign_up_for_sportjunkie">Sign Up For SportJunkie</string>
    <string name="log_in">Log In</string>
    <string name="title">Title</string>
    <string name="read_more">Read More</string>
    <string name="image_for_article">Image For Article</string>
    <string name="share_button">Share Button</string>
    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>
    <string name="swimming">Swimming</string>
    <string name="cricket">Cricket</string>
    <string name="football">Football</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="my_profile">My Profile</string>
    <string name="log_out">Log Out</string>
    <string name="article_photos">Article Photos</string>
    <string name="you_may_also_like">You May Also Like</string>
    <string name="also_from_this_author">Also From This Author</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="gallery">Gallery</string>
    <string name="share_article">Share Article</string>
</resources>
