<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home"/>
        <item
            android:id="@+id/foosball"
            android:icon="@drawable/football"
            android:title="@string/football"/>
        <item
            android:id="@+id/cricket"
            android:icon="@drawable/cricket"
            android:title="@string/cricket"/>
        <item
            android:id="@+id/Swimming"
            android:icon="@drawable/swimming"
            android:title="@string/swimming"/>
    </group>

    <item
        android:title="@string/account">
        <menu>
            <item
                android:id="@+id/prof"
                android:title="@string/my_profile"/>
            <item
                android:id="@+id/loggo"
                android:title="@string/log_out"/>
        </menu>
    </item>

</menu>