<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_account_circle_white_24dp"
        android:orderInCategory="80"
        android:title="@string/title_activity_profile"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_white_24dp"
        android:orderInCategory="90"
        android:title="@string/home"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share_white_24dp"
        android:title="@string/share_article"
        app:showAsAction="ifRoom"/>


</menu>