<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="5dp">

    <Button
        android:id="@+id/email_signup_button"
        style="@style/FirebaseUI.Button.AccountChooser.EmailButton"
        android:text="@string/signUpEmail"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <Button
        android:id="@+id/google_signup_button"
        style="@style/FirebaseUI.Button.AccountChooser.GoogleButton"
        android:layout_marginBottom="16dp"
        android:text="@string/sign_up_with_google"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/question_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/have_an_account_already"/>
</LinearLayout>