<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:app="http://schemas.android.com/apk/res-auto"
                                    xmlns:tools="http://schemas.android.com/tools"
                                    android:id="@+id/sj_card_view"
                                    android:layout_width="match_parent"
                                    android:layout_height="@dimen/card_height"
                                    android:layout_gravity="center"
                                    android:layout_marginBottom="@dimen/md_keylines"
                                    android:layout_marginLeft="@dimen/md_keylines"
                                    android:layout_marginRight="@dimen/md_keylines"
                                    android:foreground="?attr/selectableItemBackground"
                                    app:cardElevation="24dp"
                                    app:layout_collapseMode="parallax"
                                    app:layout_collapseParallaxMultiplier="1.0">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/card_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_image_height"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/image_for_article"
            android:scaleType="centerCrop"
            tools:src="@drawable/a"/>

        <TextView
            android:id="@+id/card_category"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_title_height"
            android:layout_alignBottom="@id/card_image"
            android:layout_marginLeft="@dimen/md_keylines"
            android:layout_marginStart="@dimen/md_keylines"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/whitetitey"
            tools:text="Category"
            />

        <TextView
            android:id="@+id/card_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_image"
            android:layout_marginBottom="@dimen/md_keylines"
            android:layout_marginLeft="@dimen/md_keylines"
            android:layout_marginRight="@dimen/md_keylines"
            android:layout_marginTop="@dimen/md_keylines"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="Title"/>

        <Button
            android:id="@+id/read_more"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_title"
            android:text="@string/read_more"
            android:textColor="@color/colorPrimary"/>

        <ImageButton
            android:id="@+id/share_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="@dimen/cards_button_width"
            android:layout_height="@dimen/cards_button_height"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/card_title"
            android:layout_marginEnd="@dimen/md_keylines"
            android:layout_marginRight="@dimen/md_keylines"
            android:contentDescription="@string/share_button"
            android:tint="@color/button_grey"
            app:srcCompat="@drawable/ic_share_black_24dp"/>

        <ImageButton
            android:id="@+id/favorite_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="@dimen/cards_button_width"
            android:layout_height="@dimen/cards_button_height"
            android:layout_below="@+id/card_title"
            android:layout_marginRight="@dimen/md_keylines"
            android:layout_toLeftOf="@id/share_button"
            android:tint="@color/button_grey"
            app:srcCompat="@drawable/ic_favorite_black_24dp"/>


    </RelativeLayout>

</android.support.v7.widget.CardView>